# bibleVerse

./: CMakeLists.txt  README  bibleVerse.pro  bibleVerseConfig.ui  config.h  plasma-applet-bibleverse.desktop  plasma-bibleverse.cpp  plasma-bibleverse.h  versedownloader.cpp  versedownloader.h  web.cpp  web.h  webtool.cpp  webtool.h
src/: bibleVerseGeneralConfig.ui  bibleVerseViewConfig.ui  config.h  plasma-bibleverse.cpp  plasma-bibleverse.h  versedownloader.cpp  versedownloader.h
